--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,9 @@
-# The name of your Worker.
+# wrangler.toml
+# The name of your project. This will be part of the final URL.
 name = "tech-flow"
 
 # The date of the Workers runtime version to use.
 compatibility_date = "2024-06-24"
 
-# This section tells Wrangler to treat this as a static site.
-assets = { directory = "./dist" }
-# The directory where your built static assets are located.
-# Your build log shows they are in "dist".
+# This tells Wrangler where your final build folder is.
+pages_build_output_dir = "./dist"
